deploy.yml
apiVersion: v1
kind: Pod
spec:
  containers:
  - name: kubectl
    image: bitnami/kubectl:1.32.0
    command:
    - cat
    tty: true
