deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: shop

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-deployment
  namespace: default
  labels:
    app: shop-app
spec:
  replicas: 2  # Number of pods to run
  selector:
    matchLabels:
      app: shop-app
  template:
    metadata:
      labels:
        app: shop-app
    spec:
      containers:
      - name: shop-container
        image: registry.local.innolab.in/shop:latest  # Replace with your image and tag
        ports:
        - containerPort: 8082  # Port your application listens on
          name: app
        - containerPort: 8083
          name: server 

---

apiVersion: v1
kind: Service
metadata:
  name: shop-service
  labels:
    app: shop-app
spec:
  selector:
    app: shop-app  # Matches the Deployment's labels
  ports:
  - protocol: TCP
    port: 8082          # Port the Service exposes
    targetPort: app    # Container's port to forward traffic to
    name: app
  - protocol: TCP
    port: 8083          # Port the Service exposes
    targetPort: server    # Container's port to forward traffic to
    name: server
